--- a/PhotoSite/photosite.html
+++ b/PhotoSite/photosite.html
@@ -3,6 +3,10 @@
 
 <head>
     <title>Photo Blog</title>
+    <link rel="stylesheet" href="photos.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@500&display=swap" rel="stylesheet">
 </head>
 
 <body>
