--- a/FlexboxStarter/index.html
+++ b/FlexboxStarter/index.html
@@ -21,6 +21,12 @@
         <div style="background-color: #6930c3"></div>
     </section>
 
+    <main>
+        <section class="sidebar"></section>
+        <section class="maincontent"></section>
+        <section class="sidebar"></section>
+    </main>
+
 </body>
 
 </html>
